--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
+    "@wordpress/scripts": "^24.6.0",
     "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.49",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.54.8",
-    "sass-loader": "^12.1.0"
+    "sass-loader": "^12.1.0",
+    "webpack-cli": "^4.10.0"
   },
   "name": "myuber-theme",
   "description": "My Uber Theme Link 365 Examiniation",
@@ -246,7 +248,7 @@
     "lilconfig": "^2.0.6",
     "lines-and-columns": "^1.2.4",
     "loader-runner": "^4.3.0",
-    "loader-utils": "^2.0.2",
+    "loader-utils": "^2.0.4",
     "locate-path": "^5.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -429,8 +431,8 @@
     "std-env": "^3.2.1",
     "stream-browserify": "^2.0.2",
     "stream-http": "^2.8.3",
-    "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
+    "string_decoder": "^1.3.0",
     "strip-ansi": "^6.0.1",
     "strip-final-newline": "^2.0.0",
     "style-loader": "^2.0.0",
@@ -469,7 +471,6 @@
     "watchpack": "^2.4.0",
     "wbuf": "^1.7.3",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.3",
     "webpack-dev-server": "^4.10.1",
     "webpack-merge": "^5.8.0",
@@ -492,7 +493,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch --progress"
+    "watch": "webpack --watch --progress",
+    "build": "wp-scripts-build",
+    "start": "wp-scripts start"
   },
   "repository": {
     "type": "git",
